
v8.4.0
======

- WL#16203: GPL License Exception Update
- WL#16173: Update allowed cipher and cipher-suite lists
- WL#16164: Implement support for new vector data type
- WL#16127: Remove the FIDO authentication mechanism
- WL#16053: Support GSSAPI/Kerberos authentication on Windows using authentication_ldap_sasl_client plug-in for C-extension

v8.3.0
======

- WL#16015: Remove use of removed COM_ commands
- WL#15985: Support GSSAPI/Kerberos authentication on Windows using authentication_ldap_sasl_client plug-in for Pure Python
- WL#15983: Stop using mysql_ssl_set api
- WL#15982: Remove use of mysql_shutdown
- WL#15950: Support query parameters for prepared statements
- WL#15942: Improve type hints and standardize byte type handling
- WL#15836: Split mysql and mysqlx into different packages
- WL#15523: Support Python DB API asynchronous execution
- BUG#35912790: Binary strings are converted when using prepared statements
- BUG#35832148: Fix Django timezone.utc deprecation warning
- BUG#35710145: Bad MySQLCursor.statement and result when query text contains code comments
- BUG#21390859: STATEMENTS GET OUT OF SYNCH WITH RESULT SETS

v8.2.0
======

- WL#15664: Add support for Python 3.12
- WL#15623: Improve the authentication module
- WL#15218: Support WebAuthn authentication
- BUG#35755852: Django config raise_on_warnings is ignored without isolation_level
- BUG#35733608: Server stmt spans right after the cnx aren't related to the connector's cnx span
- BUG#35547876: C/Python 8.1.0 type check build fails in the pb2 branch
- BUG#35544123: Kerberos unit tests configuration is outdated
- BUG#35503506: Query on information_schema.columns returns bytes
- BUG#35503377: First connected to server v8, then any v5 connections fail with utf8mb4 charset
- BUG#35141645: Memory leak in the mysqlx C extension

v8.1.0
======

- WL#15749: Remove DMG and MSI support
- WL#15672: Upgrade Python Protobuf version to 4.21.12
- WL#15630: Remove Python 3.7 support